# plugins-workspace

plugins/persisted-scope/: Cargo.toml
plugins/persisted-scope/src/: lib.rs
