[package]
name = "tauri-plugin-persisted-scope"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "feat/fs-scope-metadata" }
log.workspace = true
thiserror.workspace = true
bincode = "1"

[features]
protocol-asset = [ "tauri/protocol-asset" ]